Fixes #17727 - Distinguish sections with several overlapping comments
- Scroll to text on click + add dashed border-bottom (emphasize comment
  on page);
- Also add dashed border-bottom when going with mouse over a section.

--- a/eea/jquery/plugins/annotator/annotator.css
+++ b/eea/jquery/plugins/annotator/annotator.css
@@ -49,6 +49,10 @@
 	background: rgba(255, 255, 10, 0.3);
 }
 
+.annotator-hl.hover {
+  border-bottom: 2px dashed #ff0000;
+}
+
 .annotator-hl-temporary {
 	background: rgba(0, 124, 255, 0.3);
 }
